--- a/ProductService/appsettings.json
+++ b/ProductService/appsettings.json
@@ -18,7 +18,7 @@
     },
     "Instance" : {
       "Port" : 5030,
-      "HostName" : "localhost"
+      "HostName" : "host.docker.internal"
     }
   }
 }
