--- a/PricingService/appsettings.json
+++ b/PricingService/appsettings.json
@@ -6,7 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=lab_user;Password=lab_pass;Database=lab_netmicro_pricing;Host=localhost;Port=5432"
+    "DefaultConnection": "User ID=lab_user;Password=lab_pass;Database=lab_netmicro_pricing;Host=host.docker.internal;Port=5432"
   },
   "Spring" : {
     "Application" : {
@@ -18,7 +18,7 @@
     },
     "Instance" : {
       "Port" : 5040,
-      "HostName" : "localhost"
+      "HostName" : "host.docker.internal"
     }
   }
 }
