--- a/PolicyService/appsettings.json
+++ b/PolicyService/appsettings.json
@@ -6,7 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=lab_user;Password=lab_pass;Database=lab_netmicro_policy;Host=localhost;Port=5432"
+    "DefaultConnection": "User ID=lab_user;Password=lab_pass;Database=lab_netmicro_policy;Host=host.docker.internal;Port=5432"
   },
   "PricingServiceUri" : "http://PricingService/api/pricing",
   "Spring" : {
@@ -19,7 +19,7 @@
     },
     "Instance" : {
       "Port" : 5050,
-      "HostName" : "localhost"
+      "HostName" : "host.docker.internal"
     }
   }
 }
