--- a/DashboardService/appsettings.json
+++ b/DashboardService/appsettings.json
@@ -12,7 +12,7 @@
     "Port" : 5672
   },
   "ConnectionStrings": {
-    "ElasticSearchConnection": "http://localhost:9200"
+    "ElasticSearchConnection": "http://host.docker.internal:9200"
   },
   "Spring" : {
     "Application" : {
@@ -24,7 +24,7 @@
     },
     "Instance" : {
       "Port" : 5035,
-      "HostName" : "localhost"
+      "HostName" : "host.docker.internal"
     }
   }
 }
