--- a/AgentPortalApiGateway/appsettings.json
+++ b/AgentPortalApiGateway/appsettings.json
@@ -19,6 +19,6 @@
     }
   },
   "AppSettings": {
-    "AllowedChatOrigins" : ["http://localhost:8080","http://localhost"]
+    "AllowedChatOrigins" : ["http://host.docker.internal:8080","host.docker.internal"]
   }
 }
